[project]
name = "lastcode-tui"
version = "0.1.2"
description = "An interactive Terminal User Interface (TUI) for real-time algorithm and data structure visualization"
readme = "README.md"
authors = [
    { name = "Sunil Kumar", email = "sunindus.sk@gmail.com" }
]
keywords = ["algorithm", "visualizer", "tui", "terminal", "data-structures", "textual", "sorting"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
lastcode = "lastcode.main:main" # This is the short command the user types to run it

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lastcode"]